# PsySynth

./: .gitignore  Dockerfile  GEMINI.md  LICENSE  README.md  docker-compose.yml  extract_coordinates.py  extract_metadata.py  math_audit.md  normalize_coordinates.py  pyproject.toml  run_meta_analysis.py
assets/: style.css
psysynth/: __init__.py  app.py  extract_metadata.py  fetch_pmc_xmls.py  generate_modality_maps.py  inspect_tables.py  normalize_coordinates.py  run_meta_analysis.py  test_parse.py
