[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psysynth"
version = "0.1.0"
description = "Automated neuroimaging meta-analysis pipeline"
authors = [
    {name = "PsySynth Contributors"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "numpy>=1.21.0",
    "dash",
    "plotly",
    "scipy",
    "nibabel",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
fetch-pmc-xmls = "psysynth.fetch_pmc_xmls:main"
extract-coordinates = "psysynth.extract_coordinates:main"
extract-metadata = "psysynth.extract_metadata:main"
normalize-coordinates = "psysynth.normalize_coordinates:main"
run-meta-analysis = "psysynth.run_meta_analysis:main"
generate-modality-maps = "psysynth.generate_modality_maps:main"
psysynth-dashboard = "psysynth.app:main"

[tool.setuptools]
packages = ["psysynth"]


